<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".ActivityMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include
        android:id="@+id/custom_action_bar"
        layout="@layout/activity_action_bar"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/test3"
        android:scaleType="fitXY"
        />


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
       android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_centerVertical="true"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/banner"
            android:layout_centerHorizontal="true"
            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- Easy ImageButton -->
            <ImageButton
                android:id="@+id/easy"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:background="@drawable/buttonbg"
                android:layout_marginTop="40dp"
                />

            <!-- Easy TextView (overlapping the ImageButton) -->
            <TextView
                android:id="@+id/easyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rookie"
                android:textColor="@color/white"
                android:textSize="40dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/easy"
                android:clickable="false"
                />

            <!-- Medium ImageButton -->
            <ImageButton
                android:id="@+id/medium"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:background="@drawable/buttonbg"
                android:layout_marginTop="50dp"
                android:layout_below="@id/easy" />

            <!-- Medium TextView (overlapping the ImageButton) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/master"
                android:textColor="@color/white"
                android:textSize="40dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/medium"
                android:clickable="false"/>

            <!-- Hard ImageButton -->
            <ImageButton
                android:id="@+id/hard"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:background="@drawable/buttonbg"
                android:layout_marginTop="40dp"
                android:layout_below="@id/medium"
                android:layout_marginBottom="10dp"/>

            <!-- Hard TextView (overlapping the ImageButton) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veteran"
                android:textColor="@color/white"
                android:textSize="50dp"
                android:layout_marginTop="17dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/hard"
                android:clickable="false"/>

        </RelativeLayout>

    </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>