<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".ActivityMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/custom_action_bar"
            layout="@layout/activity_action_bar"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test3"
                android:scaleType="fitXY"
                />


    <LinearLayout


        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/banner"
            android:layout_marginBottom="60dp"


            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- Adventure ImageButton -->
            <ImageButton
                android:id="@+id/adv"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonbg" />

            <!-- Adventure TextView (overlapping the ImageButton) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/adv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:clickable="false"
                android:text="@string/adventure_mod"
                android:textColor="#FFFFFF"
                android:textSize="30dp" /> <!-- Set clickable to false -->

            <!-- Quick Game ImageButton -->
            <ImageButton
                android:id="@+id/AI"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_below="@id/adv"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonbg" />

            <!-- Quick Game TextView (overlapping the ImageButton) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/AI"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:textStyle="bold"
                android:clickable="false"
                android:text="@string/quick_game"
                android:textColor="@color/white"
                android:textSize="30dp" /> <!-- Set clickable to false -->

            <!-- Competitive Mode ImageButton -->
            <ImageButton
                android:id="@+id/comp"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_below="@id/AI"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/buttonbg" />

            <!-- Competitive Mode TextView (overlapping the ImageButton) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/comp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:clickable="false"
                android:text="@string/compeitive_mod"
                android:textColor="@color/white"
                android:textSize="30dp" /> <!-- Set clickable to false -->

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>>
    </LinearLayout>
</RelativeLayout>
